<resources>
    <string name="app_name">Password Safe</string>
    <string name="tag_line">Everything Safe Inside!!</string>
    <string name="hello_world">Password Treasure</string>
    <string name="action_settings">Settings</string>
    <string name="pass_hint">Password</string>
    <string name="verify">Login</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="show_password">Show Password</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="password_strength_crazy_strong">Crazy Strong</string>
    <string name="strength" />
    <string name="password_strength_caption">{0}</string>
    <string name="secretKey">Encrypted Data</string>
    <string name="encryptedKey">Decrypted data:</string>
    <string name="data">Normal Data</string>
    <string name="None">none</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_name_spinner_title">List of Banks</string>
    <string name="account_num_text">Account Number</string>
    <string name="atm_card_num_text">ATM card Number</string>
    <string name="atm_pin_text">ATM Pin</string>
    <string name="display_text">Display Name</string>
    <string name="add_to_bank_database">Add</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="action_add_to_db">Add New Entry</string>
    <string name="email_address_hint">username@domain</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="type">Type</string>
    <string name="unique_name">Name understandable by you</string>
    <string name="update_btn">Update</string>
    <string name="atm_expiry_date_txt">ATM expiry date</string>
    <string name="show_pin">Show Pin</string>
    <string name="left">left_column</string>
    <string name="right">right_column</string>
    <string name="add_entry">Add the entry</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear Content</string>
    <string name="forgot_passowrd">Forgot passowrd..?</string>
    <string name="view_password">View Password</string>
    <string name="atm_pin_date">ATM Expiry Date</string>
    <string name="atm_card_date_hint">mm-yyyy</string>
    <string name="user_prompt">Enter Apps Password</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="new_user">New User Register?</string>
    <string name="info">New users need to register with a valid email id. So kindly follow the below link or use \"New user registration\" link in the application\'s main page.\nThank You..</string>
    <string name="register">Register</string>
    <string name="not_now">Not Now</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="back">Back</string>
    <string name="change_email">Change Email</string>
    <string name="name">Name</string>
    <string name="no_of_bank_detail_txt">Total No. of Bank Accounts</string>
    <string name="no_of_social_detail_txt">Total No. of Social Accounts</string>
    <string name="last_modified_date_txt">Password last modified</string>
    <string name="cancel">Cancel</string>
    <string name="ifsc">IFSC</string>
    <string name="plz_register">Please Register....!</string>
    <string name="share">Share</string>
    <string name="send_to">Send To</string>
    <string name="sort_by">Sort By....</string>
    <string name="sort_by_alphabetic">Sort Alphabetically</string>
    <string name="sort_by_bank_name">Sort by Bank name</string>
    <string name="sort_by_domain_type">Sort by Domain Name</string>
    <string name="seller_name">Seller Name</string>
    <string name="website">Website</string>
    <string name="no_of_ecommerce_detail_txt">Total No. of E-Commerce Accounts</string>
    <string name="in_app_vibration">In App Vibration</string>
    <string name="in_app_sound">In App Sounds</string>
    <string name="password_expiry_date">Max Password expiry date</string>
    <string name="lock_info">Enter secret key sent to your email address</string>
    <string name="secret_key_hint">Secret Key</string>
    <string name="unlock">Unlock</string>
    <string name="warning">WARNING..!!</string>
    <string name="mobile">Mobile Number (optional)</string>
    <string name="logout">Logout</string>
    <string name="sms_otp">Send OTP via SMS</string>
    <string name="login"><u>Login</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="create_account">Create Account</string>
    <string name="step">Step 0/0</string>
    <string name="next">Next</string>
    <string name="hey_who_are_you">Please Introduce yourself..!</string>
    <string name="hey_user">Hey User,</string>
    <string name="provide_email">Receive notifications and OTP in this mail</string>
    <string name="provide_phone">Receive notifications and OTP in this number</string>
    <string name="protect_password">Protect your application with strong password</string>
    <string name="profile_creation">Profile Creation Status</string>
    <string name="username_updation">User name creation</string>
    <string name="master_password">Master password setup</string>
    <string name="email_setup">Email address setup</string>
    <string name="mobile_update">Mobile number Registration</string>
    <string name="all_setup_done">All Setup Done</string>
    <string name="example_txt">Example Text</string>
    <string name="count">Count</string>
    <string name="plus">+</string>
    <string name="social_account">Social A/c</string>
    <string name="e_account">E-Commerce A/c</string>
    <string name="bank_account">Bank A/c</string>
    <string name="select_algo">Please select Encryption Algorithm</string>
    <string name="select_algorythm">Select Algorythm</string>
    <string name="select_salt">Enter Salt</string>
    <string name="salt_hint">Text of length 32</string>
    <string name="algo_update">Algorythm setup</string>
    <string name="salt_update">Salt text setup</string>
    <string name="bank_details">Bank Details</string>
    <string name="social_account_details">Social AC details</string>
    <string name="ecom_details">E-Commerce Details</string>
    <string name="home">Home</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Closed Drawer</string>
    <string name="title_activity_temp">temp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

</resources>


