<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LockActivity">

    <item
        android:id="@+id/action_done"
        android:title="@string/add_entry"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_done"
        />

    <item
        android:id="@+id/action_cancel"
        android:title="@string/cancel"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/abc_ic_clear_mtrl_alpha"
        />

<item
    android:id="@+id/action_clear"
    android:title="@string/clear"
    android:orderInCategory="2"
    app:showAsAction="collapseActionView"
    />

</menu>