<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#3399FF">


    <TextView
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:id="@+id/create_account"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step"
        android:layout_below="@+id/create_account"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/step"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_user"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/hey_user"
        android:layout_below="@+id/step"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_algo"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/algo_id"
        android:layout_below="@+id/step"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/algo_spinner_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/algo_id"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:prompt="@string/select_algorythm"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_salt"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/salt_txtView_id"
        android:layout_below="@+id/algo_spinner_id"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/salt_hint"
        android:gravity="center"
        android:id="@+id/salt_editTxt_id"
        android:inputType="text"
        android:layout_below="@+id/salt_txtView_id"
        android:maxLength="32"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="26dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="26dp" />


</RelativeLayout>