<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LockActivity">


    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_logout"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="3"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_help"
        />

</menu>
