<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#3399FF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_creation"
        android:id="@+id/profile_creation"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_updation"
        android:id="@+id/username_ckb"
        android:layout_below="@+id/profile_creation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="45dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password"
        android:id="@+id/master_password_ckb"
        android:layout_below="@+id/username_ckb"
        android:layout_alignLeft="@+id/username_ckb"
        android:layout_alignStart="@+id/username_ckb"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_setup"
        android:id="@+id/email_ckb"
        android:layout_below="@+id/master_password_ckb"
        android:layout_alignLeft="@+id/master_password_ckb"
        android:layout_alignStart="@+id/master_password_ckb"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_update"
        android:id="@+id/mobile_ckb"
        android:layout_below="@+id/email_ckb"
        android:layout_alignLeft="@+id/email_ckb"
        android:layout_alignStart="@+id/email_ckb"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algo_update"
        android:id="@+id/algo_ckb"
        android:layout_below="@+id/mobile_ckb"
        android:layout_alignLeft="@+id/mobile_ckb"
        android:layout_alignStart="@+id/mobile_ckb"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salt_update"
        android:id="@+id/salt_ckb"
        android:layout_below="@+id/algo_ckb"
        android:layout_alignLeft="@+id/algo_ckb"
        android:layout_alignStart="@+id/algo_ckb"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:enabled="false"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_setup_done"
        android:id="@+id/all_setup_done"
        android:layout_below="@+id/salt_ckb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:textColor="#005B00"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="invisible"
        />


</RelativeLayout>